--- a/views/drawPad.hbs
+++ b/views/drawPad.hbs
@@ -298,8 +298,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"
             integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w=="crossorigin="anonymous"></script>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/socket.js"></script>
-        <script src="/js/ui_interaction.js"></script>
         <script type="module" src="/js/canvas.js"></script>
+        {{!-- <script src="/js/socket.js"></script> --}}
+        <script src="/js/ui_interaction.js"></script>
 
     </html>
